kubernetes/test/nginx.yaml
# Deploy a nginx service to test the cluster
# For more details see http://https://kubernetes.docs.cern.ch/docs/getting-started/#scale-a-cluster
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: cinder-standard-volume
spec:
  storageClassName: cinder-standard-delete
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-loadbalance
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx-loadbalance
  template:
    metadata:
      labels:
        app: nginx-loadbalance
    spec:
      volumes:
        - name: nginx-volume
          persistentVolumeClaim:
            claimName: cinder-standard-volume
            readOnly: false
      containers:
        - name: nginx
          image: nginx:1.15.5
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/www/html
              name: nginx-volume
          resources:
            requests:
              memory: "30Mi"
              cpu: "20m"
            limits:
              memory: "150Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: nginx-loadbalance
